--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary">#3F51B5</color>
-    <color name="primary_dark">#303F9F</color>
-    <color name="primary_light">#EEEEEE</color>
+    <color name="primary">#FF0000</color>
+    <color name="primary_dark">#FF0000</color>
+    <color name="primary_light">#FF0000</color>
     <color name="accent">#FF4081</color>
 
 
